--- a/.gitignore
+++ b/.gitignore
@@ -1,51 +1,21 @@
-# Node.js dependencies
+# dependencies
 node_modules/
-client/node_modules/
-server/node_modules/
 
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-# Build directories
+# build outputs
 dist/
 build/
 .next/
 out/
 
-# Temporary files
-*.tmp
-*.swp
-*.swo
-*.swn
-*.swm
+# environment files
+.env
+.env.local
+.env.*.local
 
-# OS-specific files
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# system files
 .DS_Store
-Thumbs.db
-
-# IDE/editor settings
-.vscode/
-.idea/
-*.sublime-workspace
-*.sublime-project
-
-# Coverage/testing
-coverage/
-*.lcov
-
-# Misc
-*.lock
-package-lock.json
-yarn.lock
-pnpm-lock.yaml
