--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
-  "buildCommand": "cd client && npm install && npm run build",
+  "framework": "nextjs",
+  "buildCommand": "cd client && next build",
   "outputDirectory": "client/.next"
 }
